# whiteshark

./: .env.example  .gitignore  BUSINESS_ANALYSIS.md  Dockerfile  README.md  SETUP.md  config.example.yaml  config.py  config.yaml  deploy.sh  docker-compose.yaml  gmail_service.py  main.py  models.py  pdf_generator.py  po_parser.py  pyproject.toml  requirements.txt  setup_guide.md  sheets_service.py
ap_agent/: __init__.py  agent.py  gmail_client.py  invoice_parser.py  ledger.py  security.py  wire_composer.py
deploy/: cloud_function.py
quicksand/: __init__.py  config.py  main.py
quicksand/backtest/: analytics.py  data_loader.py  engine.py  simulator.py  synthetic.py
quicksand/connectors/: exchange.py  kalshi.py
quicksand/core/: engine.py  order_manager.py  portfolio.py  risk_manager.py
quicksand/monitoring/: alerts.py
quicksand/strategies/: base.py  funding_arb.py  kalshi_mm.py
quicksand/utils/: logging.py
quicksand/web/: app.py  run.py
quicksand/web/templates/: dashboard.html
scripts/: compare_strategies.py  run_backtest.py
