[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksand"
version = "0.1.0"
description = "Multi-strategy crypto trading bot"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
alerts = [
    "python-telegram-bot>=21.0",
]

[project.scripts]
quicksand = "quicksand.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
